--- a/KpHappy.Web/Views/Admin/Index.cshtml
+++ b/KpHappy.Web/Views/Admin/Index.cshtml
@@ -612,7 +612,7 @@
     <script src="~/app/shared/modules/kphappy.common.js"></script>
     <script src="~/app/shared/filter/statusFilter.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
-
+    <script src="~/app/shared/directives/pagerDirective.js"></script>
     <script src="~/app/app.js"></script>
 
     <script src="~/app/components/products/product.module.js"></script>    
