--- a/KpHappy.Web/app/components/product_category/productCategoryListView.html
+++ b/KpHappy.Web/app/components/product_category/productCategoryListView.html
@@ -52,7 +52,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-            Footer
+            <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="getListProductCategory(page)"></pager-directive>
         </div>
         <!-- /.box-footer-->
     </div>
